# HandByHand

./: .gitignore  Dockerfile  Jenkinsfile  README.md  add_categories.py  add_items.py  docker-compose.yml  initial-db.py  pyproject.toml
.github/workflows/: fastapi.yml
backend/: main.py  socket_events.py
backend/core/: config.py
backend/db/: __init__.py  mongodb.py
backend/models/: category.py  chats.py  customer_interest.py  exchanges.py  items.py  messages.py  rating.py  user.py
backend/router/: __init__.py  auth.py  category.py  chat.py  customer_interest.py  exchange.py  image_routes.py  item.py  root.py  user.py
backend/template/: email_verify_success.html  exchange_confirmation.html  password_reset.html  password_reset_success.html  reset_password.html  verify_email.html
backend/tests/: conftest.py  test_auth.py  test_exchange.py  test_item.py
backend/utils/: auth.py  email.py  utils.py
scripts/: run-api.sh
test-data/: test-sqlalchemy.db
