[tool.poetry]
name = "backend"
version = "0.2.0"
description = ""
authors = ["choosak kwanraksri <btk1392545@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlmodel = "^0.0.21"
asyncpg = "^0.29.0"
pydantic-settings = "^2.4.0"
pyjwt = "^2.9.0"
pytest-mock = "^3.14.0"
bcrypt = "^4.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
uvicorn = "^0.30.6"
aiosmtplib = "^3.0.2"
jinja2 = "^3.1.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
email-validator = "^2.2.0"
passlib = "^1.7.4"
pymongo = "^4.8.0"
motor = "^3.5.1"
pytz = "^2024.2"


[tool.poetry.group.develop.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.23.8"
locust = "^2.31.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
